<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_album">

    <fragment
        android:id="@+id/nav_album"
        android:name="edu.rosehulman.photovoicememo.ui.album.AlbumFragment"
        android:label="@string/menu_album"
        tools:layout="@layout/fragment_album" />

    <fragment
        android:id="@+id/nav_photo"
        android:name="edu.rosehulman.photovoicememo.ui.Photo.PhotoFragment"
        android:label="@string/menu_photo"
        tools:layout="@layout/fragment_photo" />

    <fragment
        android:id="@+id/nav_photo_detail"
        android:name="edu.rosehulman.photovoicememo.ui.Photo.PhotoDetailFragment"
        android:label="@string/photo_detail"
        tools:layout="@layout/fragment_photo_detail"/>

    <fragment
        android:id="@+id/nav_camera"
        android:name="edu.rosehulman.photovoicememo.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="edu.rosehulman.photovoicememo.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_login"
        android:name="edu.rosehulman.photovoicememo.ui.LogIn.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="edu.rosehulman.photovoicememo.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>